--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class='ikun'>
                 <img src='img/tu.jpg'>
                 <div class='ikun_mid'>
-                    <h3><span>小黑学长T</span>
+                    <h3><span>黄优萍</span>
                         <br>
                         <p style='color: #4088A5'>求职意向:前端设计</p>
                     </h3>
