--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         }
 
         .ikun_mid span {
-            font-size: 40px;
+            font-size: 35px;
         }
 
         .ikun_right {
@@ -86,8 +86,10 @@
         .ikun_r1,
         .ikun_r2,
         .ikun_r3,
-        .ikun_r4 {
-            display: flex;
+        .ikun_r4,
+        .ikun_r5,
+        .ikun_r6{
+            /* display: flex; */
             flex-direction: row;
             margin-bottom: -15px;
         }
@@ -95,6 +97,11 @@
         .normal {
             display: flex;
             flex-direction: row;
+            font-weight: bold;
+        }
+        .name {
+            font-family: "font-weight: bold;";
+            font-size: 15px;
             font-weight: bold;
         }
     </style>
@@ -111,29 +118,37 @@
         </div>
         <div class='mid'>
             <div class='ikun'>
-                <img src='img/tu.jpg'>
+                <img width='140px' height='170px' src='img/12.jpg'>
                 <div class='ikun_mid'>
-                    <h3><span>黄优萍</span>
-                        <br>
-                        <p style='color: #4088A5'>求职意向:前端设计</p>
-                    </h3>
+                    <span class="name">黄优萍</span>
+                    <div class='ikun_r5'>
+                        <p>电话号码：15955133279</p>
+                    </div>
+                    <div class='ikun_r6'>
+                        <p>邮箱：ailvyoyo@126.com</p>
+                    </div>
+                    <div class='ikun_r6'>
+                        <p>民    族	：汉</p>
+                    </div>
+                    <div class='ikun_r6'>
+                        <p>住    址：安徽省合肥市高新区</p>
+                    </div>
                 </div>
                 <div class='ikun_right'>
                     <div class='ikun_r1'>
-                        <p>21岁</p>
-                        <img src='images/1.svg' width='30px' height='30px' style='transform: translate(5px,10px)'>
+                        <p>出生年月：1993.05</p>
                     </div>
                     <div class='ikun_r2'>
-                        <p>1xxxxxxxxx</p>
-                        <img src='images/2.svg' width='30px' height='30px' style='transform: translate(5px,10px)'>
+                        <p>身    高：165cm</p>
                     </div>
                     <div class='ikun_r3'>
-                        <p>1xxxxxxx@qq.com</p>
-                        <img src='images/3.svg' width='30px' height='30px' style='transform: translate(5px,10px)'>
+                        <p>政治面貌：群众</p>
+                    </div>
+                    <div class='ikun_r3'>
+                        <p>毕业院校：安徽大学</p>
                     </div>
                     <div class='ikun_r4'>
-                        <p>中国xxx</p>
-                        <img src='images/4.svg' width='30px' height='30px' style='transform: translate(5px,10px)'>
+                        <p>学    历	：硕士研究生</p>
                     </div>
                 </div>
             </div>
@@ -141,64 +156,101 @@
                 <h3 style='margin-bottom: -8px;'><span style='border-bottom: 3px solid black'>教育背景</span></h3>
                 <hr>
                 <div class='normal'>
-                    <p>2022.07~2024.01</p>
-                    <p style='margin-left: 100px'>北京大学</p>
-                    <p style='margin-left: 100px'>计算机专业（专科）</p>
+                    <p>2015.07-2018.06</p>
+                    <p style='margin-left: 100px'>安徽大学</p>
+                    <p style='margin-left: 100px'>电子与通信工程（硕士研究生）</p>
                 </div>
-                <p style='margin-top: -10px'>主修课程：python、HTML+CSS、PHP、java</p>
+                <div class='normal'>
+                    <p>2010.07-2014.06</p>
+                    <p style='margin-left: 100px'>安徽师范大学皖江学院</p>
+                    <p style='margin-left: 100px'>电子信息工程（本科）</p>
+                </div>
             </div>
             <div class='work'>
-                <h3 style='margin-bottom: -8px'><span style='border-bottom: 3px solid black'>实习经验</span></h3>
+                <h3 style='margin-bottom: -8px'><span style='border-bottom: 3px solid black'>工作经历</span></h3>
                 <hr>
                 <div class='normal'>
-                    <p>2022.04~至今</p>
-                    <p style='margin-left: 100px'>中南哇唧唧哇本科生院</p>
-                    <p style='margin-left: 100px'>预备Idol</p>
+                    <p>2021.03~至今</p>
+                    <p style='margin-left: 100px'>软视软件（合肥）有限工作（Zoom）</p>
+                    <p style='margin-left: 100px'>软件测试（QA）工程师</p>
                 </div>
                 <ul style='margin-top: -10px;margin-left: -15px'>
-                    <li>主修课程：PHP、ps、java、前端设计</li>
-                    <li>为了爱与正义，为了世界和平，我们ikun要站出来；</li>
-                    <li>我就是中南之光。</li>
+                    <li>负责参与公司billing相关业务的web/mobile平台的软件测试任务，保证系统质量及上线的软件质量；</li>
+                    <li>负责所参与业务的UI/API相关自动化测试编写及相关维护；</li>
+                    <li>负责定期向US方面同步相关软件质量的测试进度和测试结果。</li>
                 </ul>
                 <div class='normal'>
-                    <p>2020.03~2024.03</p>
-                    <p style='margin-left: 100px'>中南哇唧唧哇研究生院</p>
-                    <p style='margin-left: 100px'>预备Idol研究生</p>
+                    <p>2018.07~2021.03</p>
+                    <p style='margin-left: 100px'>北京辰安科技股份有限公司</p>
+                    <p style='margin-left: 100px'>软件测试工程师</p>
                 </div>
                 <ul style='margin-top: -10px;margin-left: -15px'>
-                    <li>主修课程：pr、python、HTML、日语</li>
-                    <li>为了爱与正义，为了世界和平，我们ikun要站出来；</li>
-                    <li>我就是中南之光。</li>
+                    <li>主参与项目的需求分析过程，推动产品的项目开发上线；</li>
+                    <li>负责项目测试计划，测试用例等编写以及测试环境的搭建及维护；</li>
+                    <li>负责承担多项大型项目的测试工作，包括各项目所需的安全测试，性能测试及自动化测试等。保证整个项目周期的过程管控及质量环节；</li>
+                    <li>负责支撑并推动项目整体验收，完成其他上级交办的系统演示等工作；</li>
                 </ul>
                 <br>
             </div>
-            <div class='school'>
-                <h3 style='margin-bottom: -8px'><span style='border-bottom: 3px solid black'>校园经历</span></h3>
+            <div class='skills'>
+                <h3 style='margin-bottom: -8px'><span style='border-bottom: 3px solid black'>专业技能</span></h3>
                 <hr>
                 <div class='normal'>
-                    <p>2020.03~2024.06</p>
-                    <p style='margin-left: 100px'>北京大学</p>
-                    <p style='margin-left: 100px'>校园形象大使</p>
+                    <p style='margin-left: 15px'>语言技能：</p>
                 </div>
                 <ul style='margin-top: -10px;margin-left: -15px'>
-                    <li>带领自己的团队完成练习计划；</li>
-                    <li>为了爱与正义，为了世界和平，我们ikun要站出来；</li>
-                    <li>我就是中南之光。</li>
+                    <li>语六级CET6，普通话二级甲等有良好的听说读写能力，良好的英文阅读和沟通能力；</li>
+                </ul>
+                <div class='normal'>
+                    <p style='margin-left: 15px'>专业技能：</p>
+                </div>
+                <ul style='margin-top: -10px;margin-left: -15px'>
+                    <li>熟练掌握包含UI、API等自动化测试框架开发,测试脚本编写及维护</li>
+                    <li>熟练使用Oralce，MySQL，DynamoDB等数据库操作语言及编写；</li>
+                    <li>掌握Jmeter,loadrunner等性能测试工具；</li>
+                    <li>掌握postman/clarles/Fiddler等专业工具；</li>
+                    <li>熟练运用安全渗透测试工具burpSuite，对系统常见安全漏进行验证检测；</li>
+                </ul>
+                <div class='normal'>
+                    <p style='margin-left: 15px' >办公技能：</p>
+                </div>
+                <ul style='margin-top: -10px;margin-left: -15px'>
+                    <li>熟练使用office办公软件，photoshop，visio；</li>
+                </ul>
+                <div class='normal'>
+                    <p style='margin-left: 15px'>软件技能：</p>
+                </div>
+                <ul style='margin-top: -10px;margin-left: -15px'>
+                    <li>熟悉Python开发语言并独立编写接口自动化测试工具成功应用于项目；</li>
+                    <li>其他相关语言JavaScript，HTMLCSS等前端技术熟悉；</li>
                 </ul>
             </div>
             <div class='tech'>
-                <h3 style='margin-bottom: -8px'><span style='border-bottom: 3px solid black'>技能证书</span></h3>
+                <h3 style='margin-bottom: -8px'><span style='border-bottom: 3px solid black'>获得成果</span></h3>
                 <hr>
-                <p>计算机四级；</p>
-                <p>大学英语8级；</p>
-                <p>工程师。</p>
+                <div class='normal'>
+                    <p style='margin-left: 15px'>学生期间：</p>
+                </div>
+                <ul style='margin-top: -10px;margin-left: -15px'>
+                    <li>多次荣获各项国家，校外企业奖学金；</li>
+                    <li>发表完成发明型专利，专利号：CN201610899641.4</li>
+                    <li>发表SCI一区论文《Gas bubble templated synthesis of Mn3O4-embedded hollow carbon nanospheres in ethanol flame for elastic supercapacitor》参与实验室多次产学合作项目及多项学院研究课题</li>
+                    <li>参与实验室多次产学合作项目及多项学院研究课题</li>
+                    <li>优秀研究生毕业生</li>
+                </ul>
+                <div class='normal'>
+                    <p style='margin-left: 15px'>工作期间：</p>
+                </div>
+                <ul style='margin-top: -10px;margin-left: -15px'>
+                    <li>负责担任多项大型项目的测试负责人，推进公司大型项目的顺利验收，满足用户需求。并同步支撑多项正在进行的项目过程质量；</li>
+                    <li>2020年度优秀员工</li>
+                </ul>
             </div>
             <div class='self'>
                 <h3 style='margin-bottom: -8px'><span style='border-bottom: 3px solid black'>自我评价</span></h3>
                 <hr>
                 <p>
-                    大家好，我是练习时长两年半的个人练习生，我深耕中南十余载，历尽千辛万苦，终学得一技之长，希望我能为我的粉丝们带来快乐，
-                    跟着我左手右手一个慢动作，右手左手慢动作重播。
+                    性格热情大方，为人诚恳，吃苦耐劳，有着严谨科学的科研精神，生活中是个懂得包容，沉稳，关注细节的人，对待工作内容可以保持高度的敏感性和关注度，熟悉软件系统一定的开发流程，有很强的业务理解，需求分析及发觉潜在问题的能力，善于沟通，贴近用户。
                 </p>
             </div>
         </div>
