--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                 </div>
                 <ul style='margin-top: -10px;margin-left: -15px'>
                     <li>负责参与公司billing相关业务的web/mobile平台的软件测试任务，保证系统质量及上线的软件质量；</li>
+                    <li>负责测试计划的制定，测试用例的设计，执行，bug的缺陷管理及跟踪</li>
                     <li>负责所参与业务的UI/API相关自动化测试编写及相关维护；</li>
                     <li>负责定期向US方面同步相关软件质量的测试进度和测试结果。</li>
                 </ul>
@@ -244,6 +245,7 @@
                 <ul style='margin-top: -10px;margin-left: -15px'>
                     <li>负责担任多项大型项目的测试负责人，推进公司大型项目的顺利验收，满足用户需求。并同步支撑多项正在进行的项目过程质量；</li>
                     <li>2020年度优秀员工</li>
+                    <li>软件评测师</li>
                 </ul>
             </div>
             <div class='self'>
